# palletizer

./: ALGORITHM.md  README.md  app.py  box_detector.py  main.py  pyproject.toml
__marimo__/session/: app.py.json
data/poseA/: point_cloud_PLY_48509957_1200_24-11-2025-15-14-10.json
data/poseB/: point_cloud_PLY_48509957_1200_24-11-2025-15-16-00.json
data/poseC/: point_cloud_PLY_48509957_1200_24-11-2025-15-18-15.json
data/poseD/: point_cloud_PLY_48509957_1200_24-11-2025-15-19-47.json
data/poseE/: point_cloud_PLY_48509957_1200_24-11-2025-15-21-16.json
src/: box_lib.py
src/__marimo__/session/: app.py.json
