[project]
name = "pelletizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.18.1",
    "numpy>=2.3.5",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyvista>=0.46.4",
]
